docroot/modules/custom/va_gov_user/css/sections_accordion.css
.sections > li > a {
  color: #212121;
}

.item-list ul.sections li {
  list-style: none;
  margin: 0;
  padding: 0.1rem;
}

.item-list ul.sections .item-list ul {
  background-color: #ffffff;
  margin: 0;
  padding: 0 0 0 2em;
}

.item-list ul.sections .item-list ul.subsections {
  padding: 1rem 0 1rem 2rem;
}

.item-list > ul.sections > li {
  background-color: #f1f1f1;
  border: 2px solid #f1f1f1;
  margin: 0.25rem 0 0.2rem 0.25rem;
  padding: 0;
  position: relative;
}

.item-list > ul.sections > li ul li {
  list-style: disc;
}

.item-list > ul.sections {
  margin-left: 0;
  max-width: 400px;
}

.item-list > ul.sections > li > a {
  display: block;
  font-weight: bold;
  padding: 0.5rem;
}

.item-list > ul.sections > li:active,
.item-list > ul.sections > li:focus,
.item-list > ul.sections > li:hover {
  background-color: #d6d7d9;
  border-color: #d6d7d9;
}

ul.sections li .usa-accordion-button {
  background-image: url('../images/plus.svg');
  background-size: 1rem;
  background-repeat: no-repeat;
  background-color: transparent;
  border: 0;
  cursor: pointer;
  display: block;
  height: 1rem;
  margin: 0;
  padding: 0;
  position: absolute;
  right: 0.75rem;
  top: 0.75rem;
  width: 1rem;
}

.sections li .usa-accordion-button.open {
  background-image: url('../images/minus.svg');
}

.sections .subsections {
  display: block;
}

.sections .subsections.hidden {
  display: none;
}

